# couplingguard

./: .env.example  .gitignore  2026-05-26-couplingguard-prd.md  2026-05-26-couplingguard-todo.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  action.yml  coupling-score.json  llms.txt  pricing.md  pyproject.toml  skills-lock.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/remotion/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
demo/remotion/src/: CouplingDemo.tsx  Root.tsx  theme.ts
devcontainer/: devcontainer.json
docs/: coupling-cheatsheet.md
docs/marketing/: README.md  blog-post.md  coupling-cheatsheet.md  launch-checklist.md  launch-tweet-thread.md  marketplace-listing.md  show-hn-post.md
src/couplingguard/: __init__.py  cli.py  codeowners_loader.py  config.py  dashboard.py  delta.py  git_parser.py  github_poster.py  gitlab_poster.py  matrix.py  models.py  pr_analyzer.py  renderer.py
tests/: conftest.py  test_cli.py  test_codeowners_loader.py  test_config.py  test_dashboard.py  test_delta.py  test_git_parser.py  test_matrix.py  test_orchestrator.py  test_pr_analyzer.py  test_renderer.py
tests/e2e/: test_dogfood.py  test_e2e.py
tests/integration/: test_github_poster.py  test_gitlab_poster.py
