[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "couplingguard"
version = "0.1.0"
description = "Detect file coupling risk in pull requests from git co-change history."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Meru143" }]
keywords = ["github-action", "coupling", "code-quality", "pull-request", "static-analysis", "git", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "GitPython>=3.1.40",
    "PyGithub>=2.4.0",
    "python-gitlab>=4.10.0",
    "codeowners>=0.7.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "build>=1.2.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
couplingguard = "couplingguard.cli:main"

[project.urls]
Homepage = "https://github.com/Meru143/couplingguard"
Repository = "https://github.com/Meru143/couplingguard"
Issues = "https://github.com/Meru143/couplingguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/couplingguard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/couplingguard"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/couplingguard"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.semantic_release]
version_variables = ["src/couplingguard/__init__.py:__version__"]
branch = "main"
upload_to_pypi = true
build_command = "python -m build"
